--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: ebouncer project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -13,6 +13,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   image_picker: ^0.7.5+2
+  just_audio: ^0.7.4+1
+  weekday_selector: ^1.0.0
+  select_dialog: ^2.0.0
 
 dev_dependencies:
   flutter_test:
